Modified existing endpoints to use argon2
